# libigl-project-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  info.txt  objects-repo.txt  workspace-commands.txt
basic-examples/basic-proof-container/: eigen-example.cpp  first-inside-container.cpp
basic-examples/libigl-bunny-example/: CMakeLists.txt  bunny-example.cpp
basic-examples/libigl-camelhead-example/: CMakeLists.txt  camelhead-example.cpp
basic-examples/libigl-rotating-cow/: CMakeLists.txt  rotating-cow.cpp
basic-examples/opengl-rubik-example/: CMakeLists.txt  rubik-example.cpp
basic-examples/opengl-triangle-example/: CMakeLists.txt  triangle-example.cpp
data/frag-shader/: basic.frag
data/vert-shader/: curv-bunny-demo.vert  curv-demo.vert  mesh-test.vert
demos/: 1demo.cpp  CMakeLists.txt  bunny-demo.cpp  curvature-bunny-demo.cpp  curvature-cow-demo.cpp  curvature-screwdriver-demo.cpp
docs/: architecture.md  docker-setup.md  sanity-tests.md
examples/combined/: CMakeLists.txt  combined-cow-example.cpp
examples/curvature/: CMakeLists.txt  curvature-armadillo-example.cpp  curvature-bunny-example.cpp  curvature-camelhead-example.cpp  curvature-cheburashka-example.cpp  curvature-cow-example.cpp  curvature-face-example.cpp  curvature-fertility-example.cpp  curvature-planexy-example.cpp  curvature-screwdriver-example.cpp  curvature-ycylinder-example.cpp
examples/deformation/: CMakeLists.txt  deformation-cow-example.cpp
include/core/: glfw-window.h
include/geometry/: curvature.h  deformation.h  geometry.h
include/io/: model-loader.h
include/render/: camera.h  mesh.h  renderer.h  shader.h
libigl-bunny-example/: CMakeLists.txt  bunny-example.cpp
libigl-camelhead-example/: CMakeLists.txt
libigl-rotating-cow/: CMakeLists.txt  rotating-cow.cpp
opengl-rubik-example/: CMakeLists.txt  rubik-example.cpp
opengl-triangle-example/: CMakeLists.txt
results/deformation/mkv-videos/: def-cow.mkv
sanity/: CMakeLists.txt  backend-sanity.cpp  geometry-curvature-sanity.cpp  geometry-deformation-sanity.cpp  geometry-geometry-sanity.cpp  io-model-loader-sanity.cpp  render-camera-sanity.cpp  render-mesh-sanity.cpp  render-renderer-sanity.cpp  render-shader-sanity.cpp
sanity/basic-tests/: CMakeLists.txt  render-mesh-sanity.cpp  render-shader-sanity.cpp
sanity/core/: CMakeLists.txt  core-window-sanity.cpp
sanity/geometry/: CMakeLists.txt  geometry-curvature-sanity.cpp  geometry-deformation-sanity.cpp
sanity/io/: CMakeLists.txt  io-model-loader-obj-sanity.cpp  io-model-loader-off-sanity.cpp  io-model-loader-sanity.cpp
sanity/render/: CMakeLists.txt  render-camera-sanity.cpp  render-mesh-sanity.cpp  render-renderer-sanity.cpp  render-shader-sanity.cpp
sanity/test-container/: sanity-info.cpp
sanity/test-libigl/camelhead/: CMakeLists.txt  camelhead-test.cpp
sanity/test-libigl/rotating-cow/: CMakeLists.txt
sanity/test-opengl/rubik/: CMakeLists.txt  rubik-test.cpp
sanity/test-opengl/triangle/: CMakeLists.txt  triangle-test.cpp
src/core/: glfw-window.cpp
src/geometry/: curvature.cpp  deformation.cpp  geometry.cpp
src/io/: model-loader.cpp
src/render/: camera.cpp  mesh.cpp  renderer.cpp  shader.cpp
utilities/frag-shader/: curv-demo.frag  def-bunny-demo.frag
utilities/vert-shader/: cam-test.vert  def-bunny-demo.vert  mesh-test.vert  shader-test.vert
